--- a/info.toml
+++ b/info.toml
@@ -5,4 +5,4 @@ category = "Developer"
 version = "0.1.0"
 
 [script]
-optional_dependencies = [ "AutohideOpponents", "ghosts-pp" ]
+optional_dependencies = [ "AutohideOpponents", "Editor", "ghosts-pp" ]
